--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
 }
 header{
     height: 60vh;
-    background-image: url(/todo-pic.jpg);
+    /* background-image: url(/pic.jpg); */
+    background-image: url(/pic2.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
