--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 }
 header{
-    height: 60vh;
+    height: 70vh;
     /* background-image: url(/pic.jpg); */
     background-image: url(/pic2.jpg);
     background-repeat: no-repeat;
@@ -18,7 +18,7 @@ header{
     /* color: #d4d6d5; */
     /* color: #caac8a; */
     color: #232324d8;
-    padding-top: 10rem;
+    padding-top: 15rem;
     text-align: center;
     font-size: 2.5rem;
     font-weight: bolder;
@@ -64,7 +64,7 @@ input::placeholder{
    padding: .8rem; 
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    cursor: pointer;
-   background-color: #dbbc98c9;
+   background-color: #e4bc93;
    font-size: 1rem;
    font-weight: bold;
    border: none;
@@ -72,4 +72,30 @@ input::placeholder{
 }
 .btn:hover{
     background-color: #c6a68239;
+}
+.form-signUp-section{
+    margin: 2rem 1rem;
+    background-color: #d8dadd8d;
+}
+.form-signUp input[type = "text"],input[type = "email"]{
+    padding: .8rem;
+    border: none;
+    margin: .5rem;
+    width: 60%;
+}
+.form-signUp h2{
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #232324d8;
+   
+
+}
+
+.signup{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items:center;
 }
